--- a/ApartmentRental.API/ApartmentRental.API.csproj
+++ b/ApartmentRental.API/ApartmentRental.API.csproj
@@ -17,4 +17,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ApartmentRental.Infrastructure\ApartmentRental.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
